<resources>
    <string name="app_name">DigiPark Polinela</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftar</string>
    <string name="click_to_login">Sudah punya akun? Login sekarang!</string>
    <string name="click_to_register">Belum punya akun? Daftar sekarang!</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="parking">Parking</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="upload">Upload</string>
    <string name="hello">Dashboard</string>
    <string name="ara">Ara</string>
    <string name="thumb">Thumbs</string>
    <string name="heroes_name">Lokasi</string>
    <string name="description">imgUrl</string>
    <string name="laporan">Terima kasih, silahkan cek penyimpanan Lokal secara berkala untuk melihat Laporannya</string>
    <string-array name="menu_spinner">
        <item>Pilih Lokasi</item>
        <item>Gedung Kuliah Bersama</item>
        <item>Gedung Seroja</item>
        <item>Gedung KHD</item>
        <item>Pos Gedung S</item>
        <item>Pos Jembatan</item>
    </string-array>
</resources>