<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="410dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/primary">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:text="LOGIN"
                android:textColor="@color/grey"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-5dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="-5dp"
                android:padding="28sp"
                android:textColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_mail_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="-5dp"
                android:layout_marginTop="-40dp"
                app:passwordToggleEnabled="true"
                android:layout_marginEnd="-5dp"
                android:padding="28sp"
                android:textColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/cardview_dark_background"
                android:padding="20dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/registerNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/click_to_register"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
