<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/primary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="REGISTER"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-200dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:textColorHint="@color/white"
            android:padding="28sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_mail_24"
                android:background="@color/grey"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:drawablePadding="10dp"
                android:hint="@string/email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="90dp"
            android:textColor="@color/black"
            app:passwordToggleEnabled="true"
            android:backgroundTint="@color/primary"
            android:textColorHint="@color/white"
            android:padding="28sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:drawableStart="@drawable/baseline_lock_24"
                android:textColorHint="@color/black"
                android:textColor="@color/white"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/register"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="80dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:backgroundTint="@color/cardview_dark_background"/>

    <TextView
        android:textSize="13sp"
        android:gravity="center"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginNow"
        android:textColor="@color/black"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:padding="30dp"
        android:src="@drawable/logorb" />
</LinearLayout>
